# declarative-agents

./: .cursorignore  .gitignore  .pylintrc  README.md  config.py  local_llm_agentic_guide.md  pyproject.toml  requirements.txt
.cursor/rules/: AgenticExpert.mdc  volatility-based-decomposition.mdc  writing-code.mdc  writing-tests.mdc
examples/: README.md
examples/basic_examples/: README.md  hello_world.yaml  note_taking_agent.yaml  poem_agent.yaml  think_token_tester.yaml
examples/basic_examples/agent_as_tool/: README.md  calculator_agent.yaml  math_orchestrator_agent.yaml  test_builtin_tool.yaml  test_orchestrator.yaml  test_simple_agent.yaml  test_user_input.yaml
examples/basic_examples/context_passing/: README.md  context_orchestrator_agent.yaml  data_analyzer_agent.yaml  data_collector_agent.yaml  simple_test.yaml  test_builtin.yaml
examples/basic_examples/evals/: poem_agent_suite.py
examples/deep_research/: mock_search_agent.yaml  orchestrator_agent.yaml
examples/standalone/: lean_startup_experiment_generator_agent.yaml  lean_startup_validation_agent.yaml  thinking_agent_example.yaml
examples/tools/: clarifier_tools.py  gpt4o_search_tool.py  orchestrator_tools.py  report_saver_tools.py  structured_orchestrator_tools.py
framework/: __init__.py  agent_runner.py  cli.py  context.py  evaluation.py  events.py  file_tools.py  input_sources.py  models.py  sandbox_tools.py  tool_context.py  tools.py  types.py  user_tools.py  utils.py
framework/declarative_agents/: __init__.py
framework/specialized_agents/: __init__.py  structured_output_agent.py
(+59 files in other folders)
